# a1tools

./: -  .gitignore  CHANGELOG.md  README.md  a1tools_auth.php  analysis_options.yaml  pubspec.yaml
.github/workflows/: build-windows.yml
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
assets/lottie/: intro.json
docs/: ARCHITECTURE.md
input/: Inspection.html
installer/: a1-tools.iss  check_requirements.bat  diagnose.ps1
landing/: index.html  style.css
lib/: app_theme.dart  guidelines.dart  home_screen.dart  main.dart  splash_animation_screen.dart  splash_video_screen.dart  summary_screen.dart
lib/config/: README.md  api_config.dart
lib/core/: core.dart
lib/hr/: hr_screen.dart  hr_service.dart
lib/l10n/: app_localizations.dart
lib/metrics/: metrics_service.dart  system_metrics_manager.dart
lib/monday export example/: Analorena_Ventoso_1768250414.xlsx  Jose_Demasi_1768250376.xlsx  Rodrigo_Mena_1768250399.xlsx  Toula_Elwell_1768250430.xlsx
lib/sql/: rename_crm_to_sunday.sql
linux/: CMakeLists.txt
plugins/: DEVELOPMENT-NOTES.md  create-zip.ps1
scripts/: build_release.ps1  convert_icon.ps1  find_missing_cache.ps1  fix_ios_icons.ps1  install-watchdog.bat  service-manager.ps1  service-manager.vbs  update_all_icons.ps1  watchdog-launcher.vbs  watchdog.ps1
service_helper/: CMakeLists.txt  a1_service_helper.cpp  tmpclaude-6ef8-cwd
watchdog/: a1_service_helper.go  service_helper_task.xml
web/: manifest.json
windows/: CMakeLists.txt
windows/privacy_payload/: CMakeLists.txt  privacy_payload.cpp
(+259 files in other folders)
